fix for scrollbar appearing when shake animation

--- a/css/404/nf-style.css
+++ b/css/404/nf-style.css
@@ -3,6 +3,7 @@ body {
     color: white;
     font-family: "Inter", sans-serif;
     overflow-y: auto;
+    overflow-x: hidden;
 }
 
 #top-container {
